--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
   background-color: black;
   height: 100vh;
   color: white;
+  position: relative;
 }
 
 .nav-bar {
@@ -38,6 +39,10 @@ body {
 }
 
 /* MAIN */
+main {
+  position: relative;
+}
+
 .box-main {
   display: flex;
   justify-content: center;
@@ -85,4 +90,28 @@ footer {
 }
 .group {
   text-align: center;
+}
+
+#icon-green {
+  fill: green;
+}
+
+.box-icons {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 15px;
+}
+
+.footer-right {
+  border: 1px solid rgb(66, 65, 66);
+  background-color: rgb(66, 65, 66);
+  color: red;
+  padding-top: 35px;
+  padding-left: 20px;
+  width: 140px;
+}
+#arrow-right {
+  position: absolute;
+  bottom: 400px;
+  right: 20px;
 }
